--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </div>
     <div class="row">
       <div class="col-md-3">
-        <h1>Ryeker</h1>
+        <h1>Kevin</h1>
       </div>
       <div class="col-md-9">
-        <h3>I started coming to Geekwise after my daughter was born and I realized that retail/food service was not where I wanted my future to go. That was in April of 2015, and now I am a full-time developer. It can happen for you too!</h3>
+        <h3>I started coming to Geekwise because I realized that the current state of healtcare is in chaos.  The government has mandated that doctors use clunky electronic medical record software that doesn't talk to each other.  The doctors are very unhappy and the patient is being denied exceptional care.  I want to make a significant contribution to healthcare.</h3>
       </div>
     </div>
   </div>
